--- a/Project.ipynb
+++ b/Project.ipynb
@@ -15,7 +15,8 @@
     "1. [Data importation](#Data-importation)\n",
     "2. [Descriptive analysis](#Descriptive-analysis)\n",
     "3. [Correlations](#Correlations)\n",
-    "4. [Machine learning exploratory](#Machine-learning-exploratory)"
+    "4. [Words occurences](#Words-occurences)\n",
+    "5. [Machine learning exploratory](#Machine-learning-exploratory)"
    ]
   },
   {
@@ -2059,12 +2060,15 @@
    "metadata": {},
    "source": [
     "## Words occurences\n",
+    "\n",
+    "### Unigram\n",
+    "\n",
     "We print the top 10 words for each review grouped by the overall score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 153,
    "metadata": {
     "scrolled": true
    },
@@ -2100,103 +2104,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>used</td>\n",
-       "      <td>pc</td>\n",
-       "      <td>having</td>\n",
-       "      <td>fairly</td>\n",
-       "      <td>start</td>\n",
+       "      <td>ps4</td>\n",
+       "      <td>ps4</td>\n",
+       "      <td>ps4</td>\n",
+       "      <td>ps4</td>\n",
+       "      <td>ps4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>launch</td>\n",
+       "      <td>sony</td>\n",
        "      <td>games</td>\n",
-       "      <td>released</td>\n",
-       "      <td>pretty</td>\n",
-       "      <td>ps3</td>\n",
+       "      <td>games</td>\n",
+       "      <td>games</td>\n",
+       "      <td>games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>going</td>\n",
-       "      <td>ps4</td>\n",
-       "      <td>fun</td>\n",
-       "      <td>time</td>\n",
-       "      <td>longer</td>\n",
+       "      <td>console</td>\n",
+       "      <td>ps3</td>\n",
+       "      <td>ps3</td>\n",
+       "      <td>like</td>\n",
+       "      <td>console</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>money</td>\n",
-       "      <td>day</td>\n",
-       "      <td>love</td>\n",
-       "      <td>buying</td>\n",
-       "      <td>damn</td>\n",
+       "      <td>just</td>\n",
+       "      <td>sony</td>\n",
+       "      <td>sony</td>\n",
+       "      <td>controller</td>\n",
+       "      <td>controller</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>make</td>\n",
-       "      <td>playing</td>\n",
-       "      <td>research</td>\n",
+       "      <td>xbox</td>\n",
        "      <td>console</td>\n",
-       "      <td>fee</td>\n",
+       "      <td>like</td>\n",
+       "      <td>game</td>\n",
+       "      <td>ps3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>console</td>\n",
-       "      <td>bought</td>\n",
-       "      <td>early</td>\n",
-       "      <td>available</td>\n",
-       "      <td>ps4</td>\n",
+       "      <td>amazon</td>\n",
+       "      <td>just</td>\n",
+       "      <td>just</td>\n",
+       "      <td>ps3</td>\n",
+       "      <td>game</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>game</td>\n",
-       "      <td>ps</td>\n",
-       "      <td>problem</td>\n",
-       "      <td>ve</td>\n",
-       "      <td>button</td>\n",
+       "      <td>games</td>\n",
+       "      <td>play</td>\n",
+       "      <td>console</td>\n",
+       "      <td>just</td>\n",
+       "      <td>like</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>good</td>\n",
+       "      <td>34</td>\n",
+       "      <td>like</td>\n",
+       "      <td>game</td>\n",
+       "      <td>console</td>\n",
        "      <td>xbox</td>\n",
-       "      <td>hope</td>\n",
-       "      <td>issues</td>\n",
-       "      <td>charge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>getting</td>\n",
-       "      <td>just</td>\n",
-       "      <td>wasn</td>\n",
-       "      <td>far</td>\n",
-       "      <td>options</td>\n",
+       "      <td>work</td>\n",
+       "      <td>does</td>\n",
+       "      <td>play</td>\n",
+       "      <td>sony</td>\n",
+       "      <td>great</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>gaming</td>\n",
-       "      <td>console</td>\n",
-       "      <td>little</td>\n",
-       "      <td>gaming</td>\n",
-       "      <td>playstation</td>\n",
+       "      <td>like</td>\n",
+       "      <td>really</td>\n",
+       "      <td>controller</td>\n",
+       "      <td>better</td>\n",
+       "      <td>just</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Score 1  Score 2   Score 3    Score 4      Score 5\n",
-       "0     used       pc    having     fairly        start\n",
-       "1   launch    games  released     pretty          ps3\n",
-       "2    going      ps4       fun       time       longer\n",
-       "3    money      day      love     buying         damn\n",
-       "4     make  playing  research    console          fee\n",
-       "5  console   bought     early  available          ps4\n",
-       "6     game       ps   problem         ve       button\n",
-       "7     good     xbox      hope     issues       charge\n",
-       "8  getting     just      wasn        far      options\n",
-       "9   gaming  console    little     gaming  playstation"
+       "   Score 1  Score 2     Score 3     Score 4     Score 5\n",
+       "0      ps4      ps4         ps4         ps4         ps4\n",
+       "1     sony    games       games       games       games\n",
+       "2  console      ps3         ps3        like     console\n",
+       "3     just     sony        sony  controller  controller\n",
+       "4     xbox  console        like        game         ps3\n",
+       "5   amazon     just        just         ps3        game\n",
+       "6    games     play     console        just        like\n",
+       "7       34     like        game     console        xbox\n",
+       "8     work     does        play        sony       great\n",
+       "9     like   really  controller      better        just"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2204,23 +2208,21 @@
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "def get_top_words(text_series):\n",
-    "    vectorizer = TfidfVectorizer(stop_words = 'english', min_df=5) # Remove stop words and words appearing in less than 5 examples\n",
-    "    tfidf_matrix = vectorizer.fit_transform(text_series)\n",
-    "    feature_names = vectorizer.get_feature_names() \n",
+    "def get_top_words(text_series, ngram):\n",
+    "    word_vectorizer = CountVectorizer(ngram_range=(ngram, ngram), analyzer='word', stop_words='english')\n",
+    "    sparse_matrix = word_vectorizer.fit_transform(text_series)\n",
+    "    frequencies = sum(sparse_matrix).toarray()[0]\n",
+    "    bigrams_freq = pd.DataFrame(frequencies, index=word_vectorizer.get_feature_names(), columns=['frequency']).sort_values(by=['frequency'], ascending=False)\n",
     "\n",
-    "    feature_array = np.array(feature_names)\n",
-    "    tfidf_sorting = np.argsort(tfidf_matrix.toarray()).flatten()[::-1]\n",
+    "    bigrams_freq = bigrams_freq.iloc[0:10]\n",
     "\n",
-    "    n = 10\n",
-    "    top_n = feature_array[tfidf_sorting][:n]\n",
-    "    return top_n\n",
+    "    return bigrams_freq.index\n",
     "\n",
     "\n",
     "top_words_per_overall = pd.DataFrame()\n",
     "\n",
     "for i in range(5):\n",
-    "    top_words_per_overall[\"Score \" + str(i+1)] = get_top_words(most_reviewed_reviews[most_reviewed_reviews.overall == (i+1)].reviewText)\n",
+    "    top_words_per_overall[\"Score \" + str(i+1)] = get_top_words(most_reviewed_reviews[most_reviewed_reviews.overall == (i+1)].reviewText, 1)\n",
     "top_words_per_overall"
    ]
   },
@@ -2228,15 +2230,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The words are kind of neutral, there is not real positive or negative sentiment word. Except for \"problem\", \"fun\" and \"issues\" in Score 3 and 4. We were waiting for the postive word to be more in Score 5 and negative Score 1. \n",
+    "The words are kind of neutral, there is not real positive or negative sentiment word. Except for \"great\" for Score 5 but only at 9th position. We were waiting for the postive word to be more in Score 5 and negative Score 1. The top word for each overall score is \"ps4\" which is the product name.\n",
+    "\n",
     "But only one word can miss some context, it's a better idea to search for multiple words.\n",
     "\n",
-    "So we now get the top bigram"
+    "### Bigram\n",
+    "\n",
+    "So we now display the top bigram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2260,55 +2265,143 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>frequency</th>\n",
+       "      <th>Score 1</th>\n",
+       "      <th>Score 2</th>\n",
+       "      <th>Score 3</th>\n",
+       "      <th>Score 4</th>\n",
+       "      <th>Score 5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>xbox 360</th>\n",
-       "      <td>82</td>\n",
+       "      <th>0</th>\n",
+       "      <td>blue light</td>\n",
+       "      <td>blu ray</td>\n",
+       "      <td>touch pad</td>\n",
+       "      <td>hard drive</td>\n",
+       "      <td>xbox 360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hard drive</th>\n",
-       "      <td>75</td>\n",
+       "      <th>1</th>\n",
+       "      <td>safe mode</td>\n",
+       "      <td>ps3 ps4</td>\n",
+       "      <td>hard drive</td>\n",
+       "      <td>play games</td>\n",
+       "      <td>free games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>free games</th>\n",
-       "      <td>70</td>\n",
+       "      <th>2</th>\n",
+       "      <td>hard drive</td>\n",
+       "      <td>steam pc</td>\n",
+       "      <td>ps4 does</td>\n",
+       "      <td>free games</td>\n",
+       "      <td>user interface</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>blu ray</th>\n",
-       "      <td>56</td>\n",
+       "      <th>3</th>\n",
+       "      <td>doesn work</td>\n",
+       "      <td>firmware update</td>\n",
+       "      <td>ps3 ps4</td>\n",
+       "      <td>new controller</td>\n",
+       "      <td>hard drive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>play games</th>\n",
-       "      <td>54</td>\n",
+       "      <th>4</th>\n",
+       "      <td>light death</td>\n",
+       "      <td>looking forward</td>\n",
+       "      <td>like ps3</td>\n",
+       "      <td>blu ray</td>\n",
+       "      <td>remote play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>customer service</td>\n",
+       "      <td>incremental services</td>\n",
+       "      <td>blu ray</td>\n",
+       "      <td>xbox 360</td>\n",
+       "      <td>games like</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>blinking blue</td>\n",
+       "      <td>pc games</td>\n",
+       "      <td>better ps3</td>\n",
+       "      <td>games like</td>\n",
+       "      <td>games look</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>59 99</td>\n",
+       "      <td>ps2 ps3</td>\n",
+       "      <td>sony support</td>\n",
+       "      <td>remote play</td>\n",
+       "      <td>ps plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>xbox ps4</td>\n",
+       "      <td>ability play</td>\n",
+       "      <td>looks like</td>\n",
+       "      <td>blue light</td>\n",
+       "      <td>play games</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>launch day</td>\n",
+       "      <td>usb port</td>\n",
+       "      <td>feel like</td>\n",
+       "      <td>just like</td>\n",
+       "      <td>blu ray</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            frequency\n",
-       "xbox 360           82\n",
-       "hard drive         75\n",
-       "free games         70\n",
-       "blu ray            56\n",
-       "play games         54"
+       "            Score 1               Score 2       Score 3         Score 4  \\\n",
+       "0        blue light               blu ray     touch pad      hard drive   \n",
+       "1         safe mode               ps3 ps4    hard drive      play games   \n",
+       "2        hard drive              steam pc      ps4 does      free games   \n",
+       "3        doesn work       firmware update       ps3 ps4  new controller   \n",
+       "4       light death       looking forward      like ps3         blu ray   \n",
+       "5  customer service  incremental services       blu ray        xbox 360   \n",
+       "6     blinking blue              pc games    better ps3      games like   \n",
+       "7             59 99               ps2 ps3  sony support     remote play   \n",
+       "8          xbox ps4          ability play    looks like      blue light   \n",
+       "9        launch day              usb port     feel like       just like   \n",
+       "\n",
+       "          Score 5  \n",
+       "0        xbox 360  \n",
+       "1      free games  \n",
+       "2  user interface  \n",
+       "3      hard drive  \n",
+       "4     remote play  \n",
+       "5      games like  \n",
+       "6      games look  \n",
+       "7         ps plus  \n",
+       "8      play games  \n",
+       "9         blu ray  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "word_vectorizer = CountVectorizer(ngram_range=(2,2), analyzer='word', stop_words='english')\n",
-    "sparse_matrix = word_vectorizer.fit_transform(most_reviewed_reviews.reviewText)\n",
-    "frequencies = sum(sparse_matrix).toarray()[0]\n",
-    "bigrams_freq = pd.DataFrame(frequencies, index=word_vectorizer.get_feature_names(), columns=['frequency']).sort_values(by=['frequency'], ascending=False)\n",
-    "bigrams_freq.head()"
+    "\n",
+    "top_words_per_overall = pd.DataFrame()\n",
+    "for i in range(5):\n",
+    "    top_words_per_overall[\"Score \" + str(i+1)] = get_top_words(most_reviewed_reviews[most_reviewed_reviews.overall == (i+1)].reviewText, 2)\n",
+    "top_words_per_overall"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, two words does not capture the sentiment of the review. The most of the outputed bigram are just common nouns. We can't say by having just \"xbox 360\" or \"blue light\" determine if the score will be 5 or 1."
    ]
   },
   {
