Added text to words occurence

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2061,6 +2061,8 @@
    "source": [
     "## Words occurences\n",
     "\n",
+    "To do our `reviewText` words occurences, we will use the product which has the most reviews \"PlayStation 4 500GB Console\"\n",
+    "\n",
     "### Unigram\n",
     "\n",
     "We print the top 10 words for each review grouped by the overall score."
