Add "Load products reviews" and "Load products reviews" subtitle to data importation

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -62,6 +62,9 @@
    "source": [
     "### Pandas importation\n",
     "\n",
+    "#### Load products reviews\n",
+    "\n",
+    "\n",
     "We import data and start by doing some simple cleaning. Dates are stored in two different formats (`reviewTime` and `unixReviewTime`). We will use the latest one to create a new `date` field with standard DateTime format, which will be easier to handle.\n",
     "\n",
     "We create a two-level index to allow grouping reviews per product and reviewer."
@@ -308,6 +311,8 @@
     "Here is a first view of the data. All the reviews are grouped by product described by its product ID (`asin`). Then, for each product, all the reviews are indexed by the reviewer.\n",
     "\n",
     "Each column of the dataframe is self-descriptive (notice that `overall` is the grade given from the reviewer in a scale between 1 and 5) and data types are allowing us to perform our analysis.\n",
+    "\n",
+    "#### Load products reviews\n",
     "\n",
     "We now load *video games* metadata. The exact file used here is: http://snap.stanford.edu/data/amazon/productGraph/categoryFiles/meta_Video_Games.json.gz. We had some trouble importing the file, so we had to make some transformations in addition to the `sed` ones, because strings were surrounded by simple quotes instead of double quotes. Here is the Python script we used:\n",
     "\n",
