Add missing data part

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -863,6 +863,279 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Missing values\n",
+    "We check if our data frame contains missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 2813 rows containing missing values\n",
+      "Columns with missing datas: ['reviewerName', 'reviewerNameLength']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>overall</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>reviewerName</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>date</th>\n",
+       "      <th>helpfulRate</th>\n",
+       "      <th>helpfulCount</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>description</th>\n",
+       "      <th>price</th>\n",
+       "      <th>title</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>reviewLength</th>\n",
+       "      <th>summaryLength</th>\n",
+       "      <th>reviewerNameLength</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>asin</th>\n",
+       "      <th>reviewerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9861019731</th>\n",
+       "      <th>A26HSO6VAFB2V4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>It works perfectly! Nothing is wrong with it.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Perfect!</td>\n",
+       "      <td>2014-07-13</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>579</td>\n",
+       "      <td>Compatible with:\\nNINTENDO Wii &amp; Gamecube\\nPac...</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>64MB 1019 Block Memory Card compatible for Wii...</td>\n",
+       "      <td>Generic</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B00000F1GM</th>\n",
+       "      <th>A2WTO0ST2SUUY9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>For those of you who haven't played Super Mari...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Super Mario 64 Review</td>\n",
+       "      <td>2013-01-10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>699</td>\n",
+       "      <td>The game that launched the Nintendo 64 system ...</td>\n",
+       "      <td>299.99</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1465</td>\n",
+       "      <td>21</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">B00000I1BF</th>\n",
+       "      <th>A3OU09O34BC73</th>\n",
+       "      <td>5</td>\n",
+       "      <td>classic game for the ps1. i love it and it sti...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>so fun!!</td>\n",
+       "      <td>2014-07-13</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2059</td>\n",
+       "      <td>Spyro is a cute purple dragon in a bit of a pi...</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>312</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ANLC4FX4QK23V</th>\n",
+       "      <td>5</td>\n",
+       "      <td>I was feeling nostalgic so I bought this game ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Blast from the past!</td>\n",
+       "      <td>2013-06-17</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2059</td>\n",
+       "      <td>Spyro is a cute purple dragon in a bit of a pi...</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>507</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B00000IWYT</th>\n",
+       "      <th>A1OYBF92TASIWN</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Wow...the only Game Boy games that even come c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>By far, the best Game Boy game ever</td>\n",
+       "      <td>2001-04-16</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4422</td>\n",
+       "      <td>The legendary Link of Hirule tackles a new que...</td>\n",
+       "      <td>186.74</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1850</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           overall  \\\n",
+       "asin       reviewerID                \n",
+       "9861019731 A26HSO6VAFB2V4        5   \n",
+       "B00000F1GM A2WTO0ST2SUUY9        5   \n",
+       "B00000I1BF A3OU09O34BC73         5   \n",
+       "           ANLC4FX4QK23V         5   \n",
+       "B00000IWYT A1OYBF92TASIWN        5   \n",
+       "\n",
+       "                                                                  reviewText  \\\n",
+       "asin       reviewerID                                                          \n",
+       "9861019731 A26HSO6VAFB2V4      It works perfectly! Nothing is wrong with it.   \n",
+       "B00000F1GM A2WTO0ST2SUUY9  For those of you who haven't played Super Mari...   \n",
+       "B00000I1BF A3OU09O34BC73   classic game for the ps1. i love it and it sti...   \n",
+       "           ANLC4FX4QK23V   I was feeling nostalgic so I bought this game ...   \n",
+       "B00000IWYT A1OYBF92TASIWN  Wow...the only Game Boy games that even come c...   \n",
+       "\n",
+       "                          reviewerName                              summary  \\\n",
+       "asin       reviewerID                                                         \n",
+       "9861019731 A26HSO6VAFB2V4          NaN                             Perfect!   \n",
+       "B00000F1GM A2WTO0ST2SUUY9          NaN                Super Mario 64 Review   \n",
+       "B00000I1BF A3OU09O34BC73           NaN                             so fun!!   \n",
+       "           ANLC4FX4QK23V           NaN                 Blast from the past!   \n",
+       "B00000IWYT A1OYBF92TASIWN          NaN  By far, the best Game Boy game ever   \n",
+       "\n",
+       "                                date  helpfulRate  helpfulCount  rank  \\\n",
+       "asin       reviewerID                                                   \n",
+       "9861019731 A26HSO6VAFB2V4 2014-07-13         -1.0             0   579   \n",
+       "B00000F1GM A2WTO0ST2SUUY9 2013-01-10          1.0             3   699   \n",
+       "B00000I1BF A3OU09O34BC73  2014-07-13         -1.0             0  2059   \n",
+       "           ANLC4FX4QK23V  2013-06-17         -1.0             0  2059   \n",
+       "B00000IWYT A1OYBF92TASIWN 2001-04-16         -1.0             0  4422   \n",
+       "\n",
+       "                                                                 description  \\\n",
+       "asin       reviewerID                                                          \n",
+       "9861019731 A26HSO6VAFB2V4  Compatible with:\\nNINTENDO Wii & Gamecube\\nPac...   \n",
+       "B00000F1GM A2WTO0ST2SUUY9  The game that launched the Nintendo 64 system ...   \n",
+       "B00000I1BF A3OU09O34BC73   Spyro is a cute purple dragon in a bit of a pi...   \n",
+       "           ANLC4FX4QK23V   Spyro is a cute purple dragon in a bit of a pi...   \n",
+       "B00000IWYT A1OYBF92TASIWN  The legendary Link of Hirule tackles a new que...   \n",
+       "\n",
+       "                            price  \\\n",
+       "asin       reviewerID               \n",
+       "9861019731 A26HSO6VAFB2V4    4.42   \n",
+       "B00000F1GM A2WTO0ST2SUUY9  299.99   \n",
+       "B00000I1BF A3OU09O34BC73    90.00   \n",
+       "           ANLC4FX4QK23V    90.00   \n",
+       "B00000IWYT A1OYBF92TASIWN  186.74   \n",
+       "\n",
+       "                                                                       title  \\\n",
+       "asin       reviewerID                                                          \n",
+       "9861019731 A26HSO6VAFB2V4  64MB 1019 Block Memory Card compatible for Wii...   \n",
+       "B00000F1GM A2WTO0ST2SUUY9                                                      \n",
+       "B00000I1BF A3OU09O34BC73                                                       \n",
+       "           ANLC4FX4QK23V                                                       \n",
+       "B00000IWYT A1OYBF92TASIWN                                                      \n",
+       "\n",
+       "                             brand  reviewLength  summaryLength  \\\n",
+       "asin       reviewerID                                             \n",
+       "9861019731 A26HSO6VAFB2V4  Generic            45              8   \n",
+       "B00000F1GM A2WTO0ST2SUUY9                   1465             21   \n",
+       "B00000I1BF A3OU09O34BC73                     312              8   \n",
+       "           ANLC4FX4QK23V                     507             20   \n",
+       "B00000IWYT A1OYBF92TASIWN                   1850             35   \n",
+       "\n",
+       "                           reviewerNameLength  \n",
+       "asin       reviewerID                          \n",
+       "9861019731 A26HSO6VAFB2V4                 NaN  \n",
+       "B00000F1GM A2WTO0ST2SUUY9                 NaN  \n",
+       "B00000I1BF A3OU09O34BC73                  NaN  \n",
+       "           ANLC4FX4QK23V                  NaN  \n",
+       "B00000IWYT A1OYBF92TASIWN                 NaN  "
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_data = video_games[video_games.isnull().any(axis=1)]\n",
+    "print(\"There are\", len(null_data), \"rows containing missing values\")\n",
+    "\n",
+    "print(\"Columns with missing datas:\", list(video_games.columns[video_games.isnull().any()]))\n",
+    "\n",
+    "null_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our dataframe contains missing values. However, it's only true for two columns : `reviewerName` and `reviewerNameLength`. These informations are not crucial for our analysis, so we can ignore this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Descriptive analysis\n",
     "\n",
     "Our descriptive analysis will focus on several metrics taken from the above dataframe. We will first focus on the distribution of reviews grade (`overall`) and then analyse \"helpful evaluations\" of reviews. Finally, we will start searching for patterns in data distribution to prepare work for the next milestone.\n",
